--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "nodemailer": "^6.9.1",
-    "sequelize": "^6.29.0"
+    "sequelize": "^6.29.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "bcrypt": "^5.1.0",
