--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mysql2": "^3.1.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
-    "passport-oauth2": "^1.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "sequelize": "^6.29.0",
     "validator": "^13.9.0"
   },
