--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
+HOST=
 PORT=
 DB_HOST=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
-
-HOST=http://localhost:3000
-
 ADMIN_EMAIL=
 ADMIN_APP_PASSWORD=
+
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+XENDIT_TOKEN_SECRET=
+
+SESSION_SECRET_KEY=
